# iiif-anywidget

./: .gitignore  CHANGELOG.md  CHANGLOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-testpypi.yml  publish.yml
docs/: index.html
docs/notebooks/: simpleviewer.html
js/: package-lock.json  package.json
js/src/: thumbnail_gallery.js
marimo/: imageviewer.py  overlay_viewer.py  overlay_viewer_with_clicks.py  simple_overlay_viewer.py  simple_viewer.py  simpleviewer.py  thumbnail_gallery.py  thumby.py
scripts/: smoke_thumbnail_gallery_manifest.py
src/: main.py
src/iiif_anywidget/: __init__.py  iiifutils.py  overlay_viewer.py  thumbnail_gallery.py  viewer.py
src/iiif_anywidget/static/: index.js  overlay_viewer.js  thumbnail_gallery.js
